Metodo para dividir y contar palabra
-Se reinicia la palabra a adivinar cada que se sale y entra al menu principal
-se envia el tamanio de la palabra 
-se divide la palabra
-pendiente analizar la respuesta y que sume

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\aleja_000\\AppData\\Local\\Programs\\Python\\Python37-32\\python3.exe"
+    "python.pythonPath": "C:\\Users\\Luis Lopez\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
 }
