--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\aleja_000\\AppData\\Local\\Programs\\Python\\Python37-32\\python3.exe"
+    "python.pythonPath": "C:\\python.exe"
 }
